added full auto support in the profile shell script